--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,8 @@ footer a {
 }
 
 @media screen and (max-width: 640px) {
+    
+
     header {
         position: static;
         background-color: white;
@@ -446,9 +448,18 @@ footer a {
 
     header nav a {
         text-align: center;
-        margin-left: 15%;
+        margin-left: 20%;
         padding: 0;
         font-size: 1.2em;
         width: 100%;
+    }
+
+    .connect img {
+        padding-left: 3.5%;
+        
+    }
+
+    body {
+        height: 100%;
     }
 }
