--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ header nav div {
 
 .wrapper-portfolio {
     max-width: 960px;
-    min-height: 800px;
+    min-height: 2300px;
     height: 100%;
     margin: 0 auto;
     margin-top: 10px;
@@ -133,7 +133,7 @@ header nav div {
 
 .portfolio-image {
     position: relative;
-    width: 250px;
+    /*width: 250px;*/
     margin: 3%;
     padding: 0;
     float: left;
@@ -147,11 +147,11 @@ header nav div {
 
 .portfolio-image img {
     float: left;
-    width: 250px;
-    height: 180px;
+    /*width: 250px;
+    height: 180px;*/
     padding: 0;
     margin: 0;
-    max-height: 182px;
+    /*max-height: 182px;*/
     z-index: 2;
 }
 
@@ -164,7 +164,7 @@ header nav div {
     width: 100%;
     height: 30px;
     z-index: 3;
-    margin-top: 125px;
+    margin-top: 300px;
     text-align: center;
     opacity: .8;
 }
@@ -232,12 +232,12 @@ textarea:focus {
 }
 
 input {
-    width: 250px;
+    width: 90%;
 }
 
 .message-form {
-    width: 265px;
-    max-width: 270px;
+    width: 90%;
+    max-width: 90%;
     min-height: 50px;
     height: 75px;
     max-height: 150px;
@@ -248,6 +248,7 @@ input {
     border: none;
     color: white;
     padding: 15px 30px;
+    width: 25%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -336,6 +337,18 @@ footer a {
     .about-me p {
         margin-top: 10px;
     }
+/*
+    .portfolio-image {
+        width: 80%;
+    } */ 
+
+    .portfolio img {
+        width: 80%;
+    }
+
+    .portfolio-image h2 {
+        margin-top: 80%;
+    }    
 }
 
 @media screen and (max-width: 768px) {
@@ -346,7 +359,11 @@ footer a {
         height: 85%;    
     }
 
-    .about-me {
+    .wrapper-portfolio {
+        min-height: 0;
+    }
+
+    .about-me, .portfolio, .contact {
         max-width: 100%;
         width: 85%;
         margin: 0 auto;
@@ -354,6 +371,24 @@ footer a {
 
     .about-me img {
         max-width: 50%;
+    }
+
+    .portfolio-image {
+        max-width: 40%;
+    }
+
+    .portfolio-image img {
+        width: 100%;
+    }
+
+    .portfolio-image h2 {
+        margin-top: 100px;
+        width: 100%;
+    }
+
+
+    .wrapper-contact {
+        max-height: 830px;
     }
 
     .connect {
@@ -370,7 +405,8 @@ footer a {
     .connect img:hover {
     background-color: #4aaaa5;
     }
-            header nav {
+    
+    header nav {
             float: right;
             margin-top: 58px;
             text-decoration: none;
@@ -417,6 +453,26 @@ footer a {
 
     .about-me img {
         max-width: 100%;
+    }
+
+    .wrapper-portfolio {
+        min-height: 2150px;
+    }
+
+    .portfolio-image {
+        max-width: 100%;
+    }
+
+    .portfolio img {
+        width: 100%;
+    }
+
+    .portfolio-image h2 {
+        margin-top: 50%;
+    }    
+
+    .wrapper-contact {
+        min-height: 650px;
     }
 
     .header-name {
